# libklel

./: Makefile.am  README  README.CREDITS  README.GRAMMAR  README.INSTALL  README.LICENSE  README.TYPES  VERSION  VERSION.LIBRARY  configure.ac
doc/: Makefile.am
doc/klel-expr/: DESCRIPTION.pod  EXAMPLES.pod  Makefile.am  NAME.pod  RETURN_VALUES.pod  SEE_ALSO.pod  SYNOPSIS.pod
doc/klelapi/: DESCRIPTION.pod  Makefile.am  NAME.pod  RETURN_VALUE.pod  SEE_ALSO.pod  SYNOPSIS.pod  TYPES.pod
doc/klellang/: GUARDED_COMMANDS.pod  INTRODUCTION.pod  Makefile.am  NAMES.pod  SEE_ALSO.pod  TYPES.pod  VALUE_EXPRESSIONS.pod
doc/klelstdlib/: FUNCTIONS.pod  INTRODUCTION.pod  Makefile.am  SEE_ALSO.pod  VARIABLES.pod
doc/kleltut/: BASIC.pod  GUARDED_COMMANDS.pod  INTRODUCTION.pod  Makefile.am  SEE_ALSO.pod  VARIABLES.pod
include/: Makefile.am  klel.h
src/: Makefile.am
src/klel-expr/: Makefile.am  klel-expr.c  klel-expr.h
src/klel-find/: Makefile.am  klel-find.c  klel-find.h
src/libklel/: Makefile.am  all-includes.h  api.c  api.h  app-includes.h  inner-string.c  inner-string.h  interpreter.c  interpreter.h  library.c  library.h  parser.c  parser.h  steel.c  steel.h  sys-includes.h  tokenizer.c  tokenizer.h  typecheck.c  typecheck.h
utils/: build  clean  common.am  test.sh  version2string  version_helper
